[gd_scene load_steps=9 format=3 uid="uid://mpkbu4j6cim3"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_1snst"]
[ext_resource type="Texture2D" uid="uid://cx8cl2chtnqsr" path="res://scenes/main_menu/image_19-43-59_202940026063510_x1_00001_.png" id="2_hx5iu"]
[ext_resource type="Texture2D" uid="uid://b4ma6pnspauvv" path="res://scenes/main_menu/art/Window_Header.png" id="2_iy7l6"]
[ext_resource type="Texture2D" uid="uid://ia5r7f63jp6q" path="res://scenes/main_menu/art/Windows_Button.png" id="3_q4eq2"]
[ext_resource type="Texture2D" uid="uid://dgktjppjq00qp" path="res://scenes/main_menu/art/Windows_Button_Pressed.png" id="4_vkani"]
[ext_resource type="Texture2D" uid="uid://ddtpbt6rajkom" path="res://scenes/main_menu/art/Windows_Button_Focus_Outlined.png" id="5_av0pf"]
[ext_resource type="Texture2D" uid="uid://cnnx057a10dda" path="res://scenes/main_menu/art/Windows_Button_Focus.png" id="6_03o6a"]
[ext_resource type="AudioStream" uid="uid://gbbm0ln0xbcs" path="res://scenes/main_menu/menu_selection_click.wav" id="8_8hpov"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1snst")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Banner" type="Sprite2D" parent="CanvasLayer/ColorRect"]
position = Vector2(512, 168)
texture = ExtResource("2_hx5iu")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.0
offset_top = -162.0
offset_right = 234.0
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iy7l6")
patch_margin_left = 3
patch_margin_top = 24
patch_margin_right = 3
patch_margin_bottom = 2

[node name="CrackmanLabel" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 9.0
offset_top = 12.0
offset_right = -7.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Crack-Man.exe"

[node name="QuitButton" type="TextureButton" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -43.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = 43.0
grow_horizontal = 0
tooltip_text = "Quit the game."
texture_normal = ExtResource("3_q4eq2")
texture_pressed = ExtResource("4_vkani")
texture_hover = ExtResource("5_av0pf")
texture_focused = ExtResource("5_av0pf")
stretch_mode = 4

[node name="Label" type="Label" parent="NinePatchRect/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "X"
horizontal_alignment = 1

[node name="ButtonsContainer" type="Control" parent="NinePatchRect"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="TextureButton" parent="NinePatchRect/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -20.0
offset_right = 80.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_q4eq2")
texture_pressed = ExtResource("4_vkani")
texture_hover = ExtResource("6_03o6a")
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/ButtonsContainer/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -11.0
offset_right = 56.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "PLAY"
horizontal_alignment = 1

[node name="RulesButton" type="TextureButton" parent="NinePatchRect/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 42.0
offset_right = 80.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_q4eq2")
texture_pressed = ExtResource("4_vkani")
texture_hover = ExtResource("6_03o6a")
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/ButtonsContainer/RulesButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -11.0
offset_right = 56.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "RULES"
horizontal_alignment = 1

[node name="RulesContainer" type="Control" parent="NinePatchRect"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="NinePatchRect/RulesContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "RULES"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect/RulesContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 78.0
offset_right = -13.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[ul]
  Crawl around the haunted drug den and get ALL THE CRACK!!!!!!!!
  Avoid the ghosts, they're scary.
"

[node name="ReturnButton" type="TextureButton" parent="NinePatchRect/RulesContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 161.5
offset_right = 80.0
offset_bottom = 201.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_q4eq2")
texture_pressed = ExtResource("4_vkani")
texture_hover = ExtResource("6_03o6a")
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/RulesContainer/ReturnButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -11.0
offset_right = 56.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Return"
horizontal_alignment = 1

[node name="GameFinishedContainer" type="Control" parent="NinePatchRect"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="NinePatchRect/GameFinishedContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 43.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "All levels complete.
You win!"
horizontal_alignment = 1

[node name="RestartButton" type="TextureButton" parent="NinePatchRect/GameFinishedContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 161.5
offset_right = 80.0
offset_bottom = 201.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_q4eq2")
texture_pressed = ExtResource("4_vkani")
texture_hover = ExtResource("6_03o6a")
stretch_mode = 0

[node name="Label" type="Label" parent="NinePatchRect/GameFinishedContainer/RestartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -11.0
offset_right = 56.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Restart"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_8hpov")
volume_db = -10.0
